--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Weather!</string>
+    <string name="app_name">Weather App</string>
+    <string name="change_city">Change city</string>
 </resources>
